// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`FileUploader Component > should render correctly with Large size 1`] = `
<div>
  <div
    class="MuiStack-root css-5thf5h-MuiStack-root"
  >
    <div
      class="MuiStack-root css-jfdv4h-MuiStack-root"
    >
      <div
        class="MuiBox-root css-0"
      >
        <span
          class="MuiTypography-root MuiTypography-headline2 css-4r4l7b-MuiTypography-root"
        />
      </div>
    </div>
    <div
      class="MuiBox-root css-zpg53h"
      data-testid="ring-fileuploader"
    >
      <div
        class="MuiStack-root css-1nym90u-MuiStack-root"
      >
        <div
          class="MuiBox-root css-q7rs8e"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-13ar1hw-MuiSvgIcon-root"
            data-testid="FileUploadOutlinedIcon"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M18 15v3H6v-3H4v3c0 1.1.9 2 2 2h12c1.1 0 2-.9 2-2v-3zM7 9l1.41 1.41L11 7.83V16h2V7.83l2.59 2.58L17 9l-5-5z"
            />
          </svg>
        </div>
        <div
          class="MuiStack-root css-aha7cr-MuiStack-root"
        >
          <h6
            class="MuiTypography-root MuiTypography-subtitle1 css-ncl1y1-MuiTypography-root"
          >
            Drag and drop file here or
          </h6>
          <div
            class="MuiBox-root css-1c1kq07"
          >
            <button
              class="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-colorPrimary css-19fh5sz-MuiButtonBase-root-MuiButton-root"
              data-testid="ring-fileuploader-browse"
              tabindex="0"
              type="button"
            >
              BROWSE FILE
            </button>
          </div>
          <p
            class="MuiTypography-root MuiTypography-body2 css-jobarv-MuiTypography-root"
          >
            PDF, DOC (max. 10MB)
          </p>
        </div>
      </div>
    </div>
    <input
      accept=".pdf,.doc,.docx"
      data-testid="ring-fileuploader-input"
      style="display: none;"
      type="file"
    />
  </div>
</div>
`;

exports[`FileUploader Component > should render correctly with Medium size 1`] = `
<div>
  <div
    class="MuiStack-root css-5thf5h-MuiStack-root"
  >
    <div
      class="MuiStack-root css-jfdv4h-MuiStack-root"
    >
      <div
        class="MuiBox-root css-0"
      >
        <span
          class="MuiTypography-root MuiTypography-headline2 css-4r4l7b-MuiTypography-root"
        />
      </div>
    </div>
    <div
      class="MuiBox-root css-b0f3jr"
      data-testid="ring-fileuploader"
    >
      <div
        class="MuiStack-root css-aha7cr-MuiStack-root"
      >
        <div
          class="MuiBox-root css-1w50flk"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root MuiSvgIcon-fontSizeLarge css-gr3ief-MuiSvgIcon-root"
            data-testid="FileUploadOutlinedIcon"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M18 15v3H6v-3H4v3c0 1.1.9 2 2 2h12c1.1 0 2-.9 2-2v-3zM7 9l1.41 1.41L11 7.83V16h2V7.83l2.59 2.58L17 9l-5-5z"
            />
          </svg>
        </div>
        <h6
          class="MuiTypography-root MuiTypography-subtitle1 css-ncl1y1-MuiTypography-root"
        >
          Drag and drop file here or
        </h6>
        <div
          class="MuiBox-root css-1c1kq07"
        >
          <button
            class="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-colorPrimary css-19fh5sz-MuiButtonBase-root-MuiButton-root"
            data-testid="ring-fileuploader-browse"
            tabindex="0"
            type="button"
          >
            BROWSE FILE
          </button>
        </div>
        <p
          class="MuiTypography-root MuiTypography-body2 css-jobarv-MuiTypography-root"
        >
          PDF, DOC (max. 10MB)
        </p>
      </div>
    </div>
    <input
      accept=".pdf,.doc,.docx"
      data-testid="ring-fileuploader-input"
      style="display: none;"
      type="file"
    />
  </div>
</div>
`;

exports[`FileUploader Component > should render correctly with Small size 1`] = `
<div>
  <div
    class="MuiStack-root css-5thf5h-MuiStack-root"
  >
    <div
      class="MuiStack-root css-jfdv4h-MuiStack-root"
    >
      <div
        class="MuiBox-root css-0"
      >
        <span
          class="MuiTypography-root MuiTypography-headline2 css-4r4l7b-MuiTypography-root"
        />
      </div>
    </div>
    <div
      class="MuiBox-root css-1hflhbk"
      data-testid="ring-fileuploader"
    >
      <div
        class="MuiBox-root css-axw7ok"
      >
        <div
          class="MuiBox-root css-1r5dlx4"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-dd39zt-MuiSvgIcon-root"
            data-testid="FileUploadOutlinedIcon"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M18 15v3H6v-3H4v3c0 1.1.9 2 2 2h12c1.1 0 2-.9 2-2v-3zM7 9l1.41 1.41L11 7.83V16h2V7.83l2.59 2.58L17 9l-5-5z"
            />
          </svg>
        </div>
        <div
          class="MuiStack-root css-1d5qw32-MuiStack-root"
        >
          <div
            class="MuiBox-root css-1qocved"
          >
            <p
              class="MuiTypography-root MuiTypography-body1 css-1o0a2yy-MuiTypography-root"
            >
              Drag and drop file here or
               
            </p>
            <p
              class="MuiTypography-root MuiTypography-body1 css-y6zmtr-MuiTypography-root"
              data-testid="ring-fileuploader-browse"
            >
              Browse file
            </p>
            <span
              aria-label="PDF, DOC (max. 10MB)"
              class="MuiBox-root css-s493y7"
              data-mui-internal-clone-element="true"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-pqxou0-MuiSvgIcon-root"
                data-testid="InfoOutlinedIcon"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M11 7h2v2h-2zm0 4h2v6h-2zm1-9C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2m0 18c-4.41 0-8-3.59-8-8s3.59-8 8-8 8 3.59 8 8-3.59 8-8 8"
                />
              </svg>
            </span>
          </div>
        </div>
      </div>
    </div>
    <input
      accept=".pdf,.doc,.docx"
      data-testid="ring-fileuploader-input"
      style="display: none;"
      type="file"
    />
  </div>
</div>
`;

exports[`FileUploader Component > should render correctly with completed file 1`] = `
<div>
  <div
    class="MuiStack-root css-5thf5h-MuiStack-root"
  >
    <div
      class="MuiStack-root css-jfdv4h-MuiStack-root"
    >
      <div
        class="MuiBox-root css-0"
      >
        <span
          class="MuiTypography-root MuiTypography-headline2 css-4r4l7b-MuiTypography-root"
        />
      </div>
    </div>
    <input
      accept=".pdf,.doc,.docx"
      data-testid="ring-fileuploader-input"
      style="display: none;"
      type="file"
    />
    <div
      class="MuiStack-root css-jfdv4h-MuiStack-root"
    >
      <div
        class="MuiBox-root css-1v6ehjo"
        data-testid="ring-fileuploader-file-1"
      >
        <div
          class="MuiBox-root css-zb6agx"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1k2pfl4-MuiSvgIcon-root"
            data-testid="UploadFileOutlinedIcon"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M14 2H6c-1.1 0-1.99.9-1.99 2L4 20c0 1.1.89 2 1.99 2H18c1.1 0 2-.9 2-2V8zm4 18H6V4h7v5h5zM8 15.01l1.41 1.41L11 14.84V19h2v-4.16l1.59 1.59L16 15.01 12.01 11z"
            />
          </svg>
        </div>
        <div
          class="MuiBox-root css-1fjtzvx"
        >
          <h6
            class="MuiTypography-root MuiTypography-subtitle1 css-121b4sa-MuiTypography-root"
          >
            test.pdf
          </h6>
          <p
            class="MuiTypography-root MuiTypography-body2 css-jobarv-MuiTypography-root"
          >
            12 Bytes
          </p>
          <div
            class="MuiBox-root css-1fhgjcy"
          >
            <span
              aria-valuemax="100"
              aria-valuemin="0"
              aria-valuenow="100"
              class="MuiLinearProgress-root MuiLinearProgress-colorSuccess MuiLinearProgress-determinate css-dxlz4m-MuiLinearProgress-root"
              role="progressbar"
            >
              <span
                class="MuiLinearProgress-bar MuiLinearProgress-bar1 MuiLinearProgress-barColorSuccess MuiLinearProgress-bar1Determinate css-jzqb24-MuiLinearProgress-bar1"
                style="transform: translateX(0%);"
              />
            </span>
          </div>
        </div>
        <div
          class="MuiBox-root css-fqvpkm"
        >
          <p
            class="MuiTypography-root MuiTypography-body2 css-1d1n1d2-MuiTypography-root"
          >
            100%
          </p>
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall css-tcs1qv-MuiSvgIcon-root"
            data-testid="CheckCircleOutlineIcon"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M16.59 7.58 10 14.17l-3.59-3.58L5 12l5 5 8-8zM12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2m0 18c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8"
            />
          </svg>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`FileUploader Component > should render correctly with default props 1`] = `
<div>
  <div
    class="MuiStack-root css-5thf5h-MuiStack-root"
  >
    <div
      class="MuiStack-root css-jfdv4h-MuiStack-root"
    >
      <div
        class="MuiBox-root css-0"
      >
        <span
          class="MuiTypography-root MuiTypography-headline2 css-4r4l7b-MuiTypography-root"
        />
      </div>
    </div>
    <div
      class="MuiBox-root css-b0f3jr"
      data-testid="ring-fileuploader"
    >
      <div
        class="MuiStack-root css-aha7cr-MuiStack-root"
      >
        <div
          class="MuiBox-root css-1w50flk"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root MuiSvgIcon-fontSizeLarge css-gr3ief-MuiSvgIcon-root"
            data-testid="FileUploadOutlinedIcon"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M18 15v3H6v-3H4v3c0 1.1.9 2 2 2h12c1.1 0 2-.9 2-2v-3zM7 9l1.41 1.41L11 7.83V16h2V7.83l2.59 2.58L17 9l-5-5z"
            />
          </svg>
        </div>
        <h6
          class="MuiTypography-root MuiTypography-subtitle1 css-ncl1y1-MuiTypography-root"
        >
          Drag and drop file here or
        </h6>
        <div
          class="MuiBox-root css-1c1kq07"
        >
          <button
            class="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-colorPrimary css-19fh5sz-MuiButtonBase-root-MuiButton-root"
            data-testid="ring-fileuploader-browse"
            tabindex="0"
            type="button"
          >
            BROWSE FILE
          </button>
        </div>
        <p
          class="MuiTypography-root MuiTypography-body2 css-jobarv-MuiTypography-root"
        >
          PDF, DOC (max. 10MB)
        </p>
      </div>
    </div>
    <input
      accept=".pdf,.doc,.docx"
      data-testid="ring-fileuploader-input"
      style="display: none;"
      type="file"
    />
  </div>
</div>
`;

exports[`FileUploader Component > should render correctly with error file 1`] = `
<div>
  <div
    class="MuiStack-root css-5thf5h-MuiStack-root"
  >
    <div
      class="MuiStack-root css-jfdv4h-MuiStack-root"
    >
      <div
        class="MuiBox-root css-0"
      >
        <span
          class="MuiTypography-root MuiTypography-headline2 css-4r4l7b-MuiTypography-root"
        />
      </div>
    </div>
    <input
      accept=".pdf,.doc,.docx"
      data-testid="ring-fileuploader-input"
      style="display: none;"
      type="file"
    />
    <div
      class="MuiStack-root css-jfdv4h-MuiStack-root"
    >
      <div
        class="MuiBox-root css-1gzr6b5"
        data-testid="ring-fileuploader-file-1"
      >
        <div
          class="MuiBox-root css-zb6agx"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-168iqmi-MuiSvgIcon-root"
            data-testid="UploadFileOutlinedIcon"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M14 2H6c-1.1 0-1.99.9-1.99 2L4 20c0 1.1.89 2 1.99 2H18c1.1 0 2-.9 2-2V8zm4 18H6V4h7v5h5zM8 15.01l1.41 1.41L11 14.84V19h2v-4.16l1.59 1.59L16 15.01 12.01 11z"
            />
          </svg>
        </div>
        <div
          class="MuiBox-root css-1fjtzvx"
        >
          <h6
            class="MuiTypography-root MuiTypography-subtitle1 css-9y9k3t-MuiTypography-root"
          >
            test.pdf
          </h6>
          <p
            class="MuiTypography-root MuiTypography-body2 css-gvdsun-MuiTypography-root"
          >
            Upload failed
          </p>
          <div
            class="MuiBox-root css-1fhgjcy"
          >
            <span
              aria-valuemax="100"
              aria-valuemin="0"
              aria-valuenow="0"
              class="MuiLinearProgress-root MuiLinearProgress-colorError MuiLinearProgress-determinate css-1nuxox8-MuiLinearProgress-root"
              role="progressbar"
            >
              <span
                class="MuiLinearProgress-bar MuiLinearProgress-bar1 MuiLinearProgress-barColorError MuiLinearProgress-bar1Determinate css-mwpn0g-MuiLinearProgress-bar1"
                style="transform: translateX(-100%);"
              />
            </span>
          </div>
        </div>
        <div
          class="MuiBox-root css-fqvpkm"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall css-rgv7p4-MuiSvgIcon-root"
            data-testid="ErrorOutlineIcon"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M11 15h2v2h-2zm0-8h2v6h-2zm.99-5C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2M12 20c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8"
            />
          </svg>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`FileUploader Component > should render correctly with idle file 1`] = `
<div>
  <div
    class="MuiStack-root css-5thf5h-MuiStack-root"
  >
    <div
      class="MuiStack-root css-jfdv4h-MuiStack-root"
    >
      <div
        class="MuiBox-root css-0"
      >
        <span
          class="MuiTypography-root MuiTypography-headline2 css-4r4l7b-MuiTypography-root"
        />
      </div>
    </div>
    <input
      accept=".pdf,.doc,.docx"
      data-testid="ring-fileuploader-input"
      style="display: none;"
      type="file"
    />
    <div
      class="MuiStack-root css-jfdv4h-MuiStack-root"
    >
      <div
        class="MuiBox-root css-1v6ehjo"
        data-testid="ring-fileuploader-file-1"
      >
        <div
          class="MuiBox-root css-zb6agx"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-a5kzim-MuiSvgIcon-root"
            data-testid="UploadFileOutlinedIcon"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M14 2H6c-1.1 0-1.99.9-1.99 2L4 20c0 1.1.89 2 1.99 2H18c1.1 0 2-.9 2-2V8zm4 18H6V4h7v5h5zM8 15.01l1.41 1.41L11 14.84V19h2v-4.16l1.59 1.59L16 15.01 12.01 11z"
            />
          </svg>
        </div>
        <div
          class="MuiBox-root css-1fjtzvx"
        >
          <h6
            class="MuiTypography-root MuiTypography-subtitle1 css-121b4sa-MuiTypography-root"
          >
            existing-file.pdf
          </h6>
          <p
            class="MuiTypography-root MuiTypography-body2 css-jobarv-MuiTypography-root"
          >
            0 Bytes / 1.0kb
          </p>
        </div>
        <div
          class="MuiBox-root css-fqvpkm"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`FileUploader Component > should render correctly with uploading file 1`] = `
<div>
  <div
    class="MuiStack-root css-5thf5h-MuiStack-root"
  >
    <div
      class="MuiStack-root css-jfdv4h-MuiStack-root"
    >
      <div
        class="MuiBox-root css-0"
      >
        <span
          class="MuiTypography-root MuiTypography-headline2 css-4r4l7b-MuiTypography-root"
        />
      </div>
    </div>
    <input
      accept=".pdf,.doc,.docx"
      data-testid="ring-fileuploader-input"
      style="display: none;"
      type="file"
    />
    <div
      class="MuiStack-root css-jfdv4h-MuiStack-root"
    >
      <div
        class="MuiBox-root css-1v6ehjo"
        data-testid="ring-fileuploader-file-1"
      >
        <div
          class="MuiBox-root css-zb6agx"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1iddjux-MuiSvgIcon-root"
            data-testid="UploadFileOutlinedIcon"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M14 2H6c-1.1 0-1.99.9-1.99 2L4 20c0 1.1.89 2 1.99 2H18c1.1 0 2-.9 2-2V8zm4 18H6V4h7v5h5zM8 15.01l1.41 1.41L11 14.84V19h2v-4.16l1.59 1.59L16 15.01 12.01 11z"
            />
          </svg>
        </div>
        <div
          class="MuiBox-root css-1fjtzvx"
        >
          <h6
            class="MuiTypography-root MuiTypography-subtitle1 css-121b4sa-MuiTypography-root"
          >
            test.pdf
          </h6>
          <p
            class="MuiTypography-root MuiTypography-body2 css-jobarv-MuiTypography-root"
          >
            5.0mb / 12 Bytes
          </p>
          <div
            class="MuiBox-root css-1fhgjcy"
          >
            <span
              aria-valuemax="100"
              aria-valuemin="0"
              aria-valuenow="50"
              class="MuiLinearProgress-root MuiLinearProgress-colorPrimary MuiLinearProgress-determinate css-1psmldc-MuiLinearProgress-root"
              role="progressbar"
            >
              <span
                class="MuiLinearProgress-bar MuiLinearProgress-bar1 MuiLinearProgress-barColorPrimary MuiLinearProgress-bar1Determinate css-ekb1bl-MuiLinearProgress-bar1"
                style="transform: translateX(-50%);"
              />
            </span>
          </div>
        </div>
        <div
          class="MuiBox-root css-fqvpkm"
        >
          <p
            class="MuiTypography-root MuiTypography-body2 css-1d1n1d2-MuiTypography-root"
          >
            50%
          </p>
          <span
            class="MuiCircularProgress-root MuiCircularProgress-indeterminate MuiCircularProgress-colorPrimary css-1b8fp5v-MuiCircularProgress-root"
            role="progressbar"
            style="width: 16px; height: 16px;"
          >
            <svg
              class="MuiCircularProgress-svg css-54pwck-MuiCircularProgress-svg"
              viewBox="22 22 44 44"
            >
              <circle
                class="MuiCircularProgress-circle MuiCircularProgress-circleIndeterminate css-19t5dcl-MuiCircularProgress-circle"
                cx="44"
                cy="44"
                fill="none"
                r="20.2"
                stroke-width="3.6"
              />
            </svg>
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`FileUploader Component > should render multiple files when multiple prop is true 1`] = `
<div>
  <div
    class="MuiStack-root css-5thf5h-MuiStack-root"
  >
    <div
      class="MuiStack-root css-jfdv4h-MuiStack-root"
    >
      <div
        class="MuiBox-root css-0"
      >
        <span
          class="MuiTypography-root MuiTypography-headline2 css-4r4l7b-MuiTypography-root"
        />
      </div>
    </div>
    <div
      class="MuiBox-root css-b0f3jr"
      data-testid="ring-fileuploader"
    >
      <div
        class="MuiStack-root css-aha7cr-MuiStack-root"
      >
        <div
          class="MuiBox-root css-1w50flk"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root MuiSvgIcon-fontSizeLarge css-gr3ief-MuiSvgIcon-root"
            data-testid="FileUploadOutlinedIcon"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M18 15v3H6v-3H4v3c0 1.1.9 2 2 2h12c1.1 0 2-.9 2-2v-3zM7 9l1.41 1.41L11 7.83V16h2V7.83l2.59 2.58L17 9l-5-5z"
            />
          </svg>
        </div>
        <h6
          class="MuiTypography-root MuiTypography-subtitle1 css-ncl1y1-MuiTypography-root"
        >
          Drag and drop file here or
        </h6>
        <div
          class="MuiBox-root css-1c1kq07"
        >
          <button
            class="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-colorPrimary css-19fh5sz-MuiButtonBase-root-MuiButton-root"
            data-testid="ring-fileuploader-browse"
            tabindex="0"
            type="button"
          >
            BROWSE FILE
          </button>
        </div>
        <p
          class="MuiTypography-root MuiTypography-body2 css-jobarv-MuiTypography-root"
        >
          PDF, DOC (max. 10MB)
        </p>
      </div>
    </div>
    <input
      accept=".pdf,.doc,.docx"
      data-testid="ring-fileuploader-input"
      multiple=""
      style="display: none;"
      type="file"
    />
    <div
      class="MuiBox-root css-0"
    >
      <button
        class="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButton-colorPrimary css-e6dsz-MuiButtonBase-root-MuiButton-root"
        data-testid="ring-fileuploader-expand"
        tabindex="0"
        type="button"
      >
        <span
          class="MuiButton-icon MuiButton-startIcon MuiButton-iconSizeMedium css-1sh91j5-MuiButton-startIcon"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1xtgchi-MuiSvgIcon-root"
            data-testid="ExpandMoreIcon"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M16.59 8.59 12 13.17 7.41 8.59 6 10l6 6 6-6z"
            />
          </svg>
        </span>
        1 of 2 files uploaded
      </button>
      <div
        class="MuiCollapse-root MuiCollapse-vertical MuiCollapse-entered css-qr6njo-MuiCollapse-root"
        style="min-height: 0px;"
      >
        <div
          class="MuiCollapse-wrapper MuiCollapse-vertical css-1x6hinx-MuiCollapse-wrapper"
        >
          <div
            class="MuiCollapse-wrapperInner MuiCollapse-vertical css-1i4ywhz-MuiCollapse-wrapperInner"
          >
            <div
              class="MuiStack-root css-jfdv4h-MuiStack-root"
            >
              <div
                class="MuiBox-root css-1v6ehjo"
                data-testid="ring-fileuploader-file-1"
              >
                <div
                  class="MuiBox-root css-zb6agx"
                >
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1k2pfl4-MuiSvgIcon-root"
                    data-testid="UploadFileOutlinedIcon"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M14 2H6c-1.1 0-1.99.9-1.99 2L4 20c0 1.1.89 2 1.99 2H18c1.1 0 2-.9 2-2V8zm4 18H6V4h7v5h5zM8 15.01l1.41 1.41L11 14.84V19h2v-4.16l1.59 1.59L16 15.01 12.01 11z"
                    />
                  </svg>
                </div>
                <div
                  class="MuiBox-root css-1fjtzvx"
                >
                  <h6
                    class="MuiTypography-root MuiTypography-subtitle1 css-121b4sa-MuiTypography-root"
                  >
                    test.pdf
                  </h6>
                  <p
                    class="MuiTypography-root MuiTypography-body2 css-jobarv-MuiTypography-root"
                  >
                    0 Bytes
                  </p>
                  <div
                    class="MuiBox-root css-1fhgjcy"
                  >
                    <span
                      aria-valuemax="100"
                      aria-valuemin="0"
                      aria-valuenow="100"
                      class="MuiLinearProgress-root MuiLinearProgress-colorSuccess MuiLinearProgress-determinate css-dxlz4m-MuiLinearProgress-root"
                      role="progressbar"
                    >
                      <span
                        class="MuiLinearProgress-bar MuiLinearProgress-bar1 MuiLinearProgress-barColorSuccess MuiLinearProgress-bar1Determinate css-jzqb24-MuiLinearProgress-bar1"
                        style="transform: translateX(0%);"
                      />
                    </span>
                  </div>
                </div>
                <div
                  class="MuiBox-root css-fqvpkm"
                >
                  <p
                    class="MuiTypography-root MuiTypography-body2 css-1d1n1d2-MuiTypography-root"
                  >
                    100%
                  </p>
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall css-tcs1qv-MuiSvgIcon-root"
                    data-testid="CheckCircleOutlineIcon"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M16.59 7.58 10 14.17l-3.59-3.58L5 12l5 5 8-8zM12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2m0 18c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8"
                    />
                  </svg>
                </div>
              </div>
              <div
                class="MuiBox-root css-1v6ehjo"
                data-testid="ring-fileuploader-file-2"
              >
                <div
                  class="MuiBox-root css-zb6agx"
                >
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1iddjux-MuiSvgIcon-root"
                    data-testid="UploadFileOutlinedIcon"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M14 2H6c-1.1 0-1.99.9-1.99 2L4 20c0 1.1.89 2 1.99 2H18c1.1 0 2-.9 2-2V8zm4 18H6V4h7v5h5zM8 15.01l1.41 1.41L11 14.84V19h2v-4.16l1.59 1.59L16 15.01 12.01 11z"
                    />
                  </svg>
                </div>
                <div
                  class="MuiBox-root css-1fjtzvx"
                >
                  <h6
                    class="MuiTypography-root MuiTypography-subtitle1 css-121b4sa-MuiTypography-root"
                  >
                    test2.pdf
                  </h6>
                  <p
                    class="MuiTypography-root MuiTypography-body2 css-jobarv-MuiTypography-root"
                  >
                    0 Bytes / 0 Bytes
                  </p>
                  <div
                    class="MuiBox-root css-1fhgjcy"
                  >
                    <span
                      aria-valuemax="100"
                      aria-valuemin="0"
                      aria-valuenow="30"
                      class="MuiLinearProgress-root MuiLinearProgress-colorPrimary MuiLinearProgress-determinate css-1psmldc-MuiLinearProgress-root"
                      role="progressbar"
                    >
                      <span
                        class="MuiLinearProgress-bar MuiLinearProgress-bar1 MuiLinearProgress-barColorPrimary MuiLinearProgress-bar1Determinate css-ekb1bl-MuiLinearProgress-bar1"
                        style="transform: translateX(-70%);"
                      />
                    </span>
                  </div>
                </div>
                <div
                  class="MuiBox-root css-fqvpkm"
                >
                  <p
                    class="MuiTypography-root MuiTypography-body2 css-1d1n1d2-MuiTypography-root"
                  >
                    30%
                  </p>
                  <span
                    class="MuiCircularProgress-root MuiCircularProgress-indeterminate MuiCircularProgress-colorPrimary css-1b8fp5v-MuiCircularProgress-root"
                    role="progressbar"
                    style="width: 16px; height: 16px;"
                  >
                    <svg
                      class="MuiCircularProgress-svg css-54pwck-MuiCircularProgress-svg"
                      viewBox="22 22 44 44"
                    >
                      <circle
                        class="MuiCircularProgress-circle MuiCircularProgress-circleIndeterminate css-19t5dcl-MuiCircularProgress-circle"
                        cx="44"
                        cy="44"
                        fill="none"
                        r="20.2"
                        stroke-width="3.6"
                      />
                    </svg>
                  </span>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`FileUploader Component > should render with error message 1`] = `
<div>
  <div
    class="MuiStack-root css-5thf5h-MuiStack-root"
  >
    <div
      class="MuiStack-root css-jfdv4h-MuiStack-root"
    >
      <div
        class="MuiBox-root css-0"
      >
        <span
          class="MuiTypography-root MuiTypography-headline2 css-4r4l7b-MuiTypography-root"
        />
      </div>
    </div>
    <div
      class="MuiBox-root css-1qxfmik"
      data-testid="ring-fileuploader"
    >
      <div
        class="MuiStack-root css-aha7cr-MuiStack-root"
      >
        <div
          class="MuiBox-root css-192exeo"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root MuiSvgIcon-fontSizeLarge css-gr3ief-MuiSvgIcon-root"
            data-testid="FileUploadOutlinedIcon"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M18 15v3H6v-3H4v3c0 1.1.9 2 2 2h12c1.1 0 2-.9 2-2v-3zM7 9l1.41 1.41L11 7.83V16h2V7.83l2.59 2.58L17 9l-5-5z"
            />
          </svg>
        </div>
        <h6
          class="MuiTypography-root MuiTypography-subtitle1 css-ncl1y1-MuiTypography-root"
        >
          Drag and drop file here or
        </h6>
        <div
          class="MuiBox-root css-1c1kq07"
        >
          <button
            class="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-colorPrimary css-19fh5sz-MuiButtonBase-root-MuiButton-root"
            data-testid="ring-fileuploader-browse"
            tabindex="0"
            type="button"
          >
            BROWSE FILE
          </button>
        </div>
        <p
          class="MuiTypography-root MuiTypography-body2 css-3ib7pl-MuiTypography-root"
        >
          Invalid file type
        </p>
      </div>
    </div>
    <input
      accept=".pdf,.doc,.docx"
      data-testid="ring-fileuploader-input"
      style="display: none;"
      type="file"
    />
  </div>
</div>
`;
